@@ -36,7 +36,7 @@ public:
 	virtual void Update();
 	void DependentDied(CObject* o);
 	virtual void Init(const float3& pos, CUnit *owner);
-
+	
 	bool checkCol;
 	bool deleteMe;
 	bool castShadow;
