@@ -250,10 +250,6 @@ void CUnitDefHandler::ParseTAUnit(std::string file, int id)
 	ud.sonarRadius=atoi(tdfparser.SGetValueDef("0", "UNITINFO\\SonarDistance").c_str());
 	ud.jammerRadius=atoi(tdfparser.SGetValueDef("0", "UNITINFO\\RadarDistanceJam").c_str());
 	ud.sonarJamRadius=atoi(tdfparser.SGetValueDef("0", "UNITINFO\\SonarDistanceJam").c_str());
-	ud.seismicRadius=atoi(tdfparser.SGetValueDef("0", "UNITINFO\\seismicDistance").c_str());
-	ud.seismicSignature=atoi(tdfparser.SGetValueDef("-1", "UNITINFO\\seismicSignature").c_str());
-	if(ud.seismicSignature==-1)
-		ud.seismicSignature = int(sqrt(ud.mass/100));
 	ud.stealth=!!atoi(tdfparser.SGetValueDef("0", "UNITINFO\\Stealth").c_str());
 	ud.targfac=!!atoi(tdfparser.SGetValueDef("0", "UNITINFO\\istargetingupgrade").c_str());
 	ud.isFeature=!!atoi(tdfparser.SGetValueDef("0", "UNITINFO\\IsFeature").c_str());
@@ -517,6 +513,16 @@ void CUnitDefHandler::ParseTAUnit(std::string file, int id)
 	ud.smoothAnim = !!atoi(tdfparser.SGetValueDef("0", "UNITINFO\\SmoothAnim").c_str());
 	ud.canLoopbackAttack = !!atoi(tdfparser.SGetValueDef("0", "UNITINFO\\CanLoopbackAttack").c_str());
 	ud.levelGround = !!atoi(tdfparser.SGetValueDef("1", "UNITINFO\\LevelGround").c_str());
+
+	ud.seismicRadius=atoi(tdfparser.SGetValueDef("0", "UNITINFO\\seismicDistance").c_str());
+	ud.seismicSignature=atoi(tdfparser.SGetValueDef("-1", "UNITINFO\\seismicSignature").c_str());
+	if(ud.seismicSignature==-1)
+	{
+		if(!ud.floater && !ud.canhover && !ud.canfly)
+			ud.seismicSignature = sqrt(ud.mass/(float)100);
+		else 
+			ud.seismicSignature = 0;
+	}
 
 	LoadSound(tdfparser, ud.sounds.ok, "ok1");
 	LoadSound(tdfparser, ud.sounds.select, "select1");
